battery shadow, camera reset button alignment issues fix

--- a/vtr-ui/src/app/components/pages/page-device-settings/children/subpage-device-settings-display/subpage-device-settings-display.component.scss
+++ b/vtr-ui/src/app/components/pages/page-device-settings/children/subpage-device-settings-display/subpage-device-settings-display.component.scss
@@ -225,6 +225,14 @@
 			}
 		}
 	}
+
+	.camera-block {
+		::ng-deep .vtr-ui-switch-row.white-theme {
+			.tool-tip-icon{
+				margin-left: 1.5rem;
+			}
+		}
+	}
 }
 
 .ecm-note {
